# scanbot-sdk-example-linux

./: .gitignore  Dockerfile  Jenkinsfile  Libraries.txt  Readme.md
.github/workflows/: run-tests-ci.yml
examples/c/: CMakeLists.txt  README.md  main.c
examples/c++/: .gitignore  README.md  Readme.md
examples/c++/live-recognition/: CMakeLists.txt  Readme.md
examples/c++/live-recognition/cmake/: FindScanbotSDK.cmake
examples/c++/live-recognition/src/: main.cpp
examples/c++/minimal/: CMakeLists.txt  Readme.md
examples/c++/minimal/src/: main.cpp
examples/c/barcode/: CMakeLists.txt
examples/c/barcode/live/: CMakeLists.txt  README.md  main.c
examples/c/barcode/minimal/: CMakeLists.txt  README.md  main.c
examples/c/cmake/: Download.cmake  FindScanbotSDK.cmake
examples/c/include/snippets/barcode/: detect_barcode.h  parse_barcode_document.h
examples/c/include/snippets/datacapture/: check_scanner.h  credit_card_scanner.h  document_data_extractor_scanner.h  medical_certificate_scanner.h  mrz_parser.h  mrz_scanner.h  ocr.h  text_pattern_scanner.h  vin_scanner.h
examples/c/include/snippets/document/: analyse_multi_page.h  analyze_multi_page.h  crop_and_analyse.h  crop_and_analyze.h  detect_document.h  document_classifier.h
examples/c/include/snippets/enhancer/: document_enhancer.h
examples/c/include/snippets/license/: floating_license.h
examples/c/include/snippets/live/: live_barcode.h
examples/c/include/utils/: utils.h
examples/c/src/: main.c
examples/c/src/snippets/barcode/: detect_barcode.c  parse_barcode_document.c
examples/c/src/snippets/datacapture/: check_scanner.c  credit_card_scanner.c  document_data_extractor_scanner.c  medical_certificate_scanner.c  mrz_parser.c  mrz_scanner.c  ocr.c  text_pattern_scanner.c  vin_scanner.c
examples/c/src/snippets/document/: analyse_multi_page.c  analyze_multi_page.c  crop_and_analyse.c  crop_and_analyze.c  detect_document.c  document_classifier.c
examples/c/src/snippets/enhancer/: document_enhancer.c
examples/c/src/snippets/license/: floating_license.c
examples/c/src/snippets/live/: live_barcode.c
examples/c/src/utils/: utils.c
examples/java/: README.md  build.gradle  settings.gradle
examples/java/DocumentQualityAnalyzerExample/: README.md  build.gradle
examples/java/docker/: Dockerfile  docker_flow.sh  run.sh
examples/nodejs/: README.md  package-lock.json  package.json  tsconfig.json
examples/nodejs/src/: index.ts
examples/python/: .gitignore  README.md  Readme.md  main.py  requirements.txt  utils.py
examples/python/live-recognition/: Readme.md  detect_barcodes.py
examples/python/minimal/: Readme.md  detect_barcodes.py  main.py  ocr.py  utils.py
examples/python/snippets/live/: camera.py  (+5 more)
test-scripts/: README.md  run-all-tests.sh  test-c.sh  test-java.sh  test-nodejs.sh  test-python.sh
(+81 files in other folders)
